Tacky generation for chapter 10. Reorganized Driver to be more of an object